# OpenLongContext

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README_COMPLETE.md  TROUBLESHOOTING.md  docker-compose.yml  fix_corrupted_files.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements-cuda.txt  requirements-mlx.txt  requirements.txt  setup.cfg  setup.py  verify_imports.py
.github/: ISSUE_TEMPLATE  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  deploy-docs.yml  docs.yml  release.yml  test.yml
configs/experiments/: hyperparams.yaml
docs/: architecture.md  authentication.md  deployment.md  evaluation.md  experiment-design.md  index.md  reproducibility.md  scaling-laws.md  theory.md
examples/: authentication_demo.py
examples/datasets/: code_continuation.py  real_pg19.py  synthetic_copy.py  synthetic_recall.py
examples/evaluation/: error_analysis.py  eval_copy.py  eval_reasoning.py  eval_retrieval.py
examples/models/: ablate_attention.py  longformer_benchmark.py  train_hyena.py  train_transformer_xl.py
examples/scaling_laws/: analyze_capacity.py  context_length_experiment.py  run_scaling_law.py
openlongcontext/: __init__.py
openlongcontext/ablation/: __init__.py  bayesian_optimization.py  experiment_registry.py  grid_search.py  hyperparameter_sweep.py  random_search.py
openlongcontext/agents/: __init__.py  agent_base.py  agent_manager.py  long_context_agent.py  openai_agent.py
openlongcontext/algorithms/: chunking.py  efficient_attention.py  memory.py  optimizer_utils.py  recurrence.py  scaling_laws.py  sliding_window.py
openlongcontext/api/: __init__.py  __main__.py  database.py  middleware.py  model_inference.py  routes.py
openlongcontext/api/auth/: __init__.py  config.py  dependencies.py  jwt.py  models.py  routes.py  services.py
openlongcontext/cli/: __init__.py  ablate.py  analyze_results.py  main.py  plot_scaling.py  run_experiment.py  sweep.py
openlongcontext/core/: __init__.py  backend.py  config.py  engine.py  experiment.py  tracking.py  types.py
openlongcontext/datasets/: dataloader.py
openlongcontext/datasets/real/: __init__.py  arxiv_math.py  books3.py  code_continuation.py  github_issues.py  pg19.py
openlongcontext/datasets/synthetic/: copy_task.py  reasoning_task.py  recall_task.py  retrieval_task.py
openlongcontext/evaluation/: __init__.py  ablation.py  copy_metrics.py  perplexity.py  reasoning_metrics.py  retrieval_metrics.py
openlongcontext/models/: __init__.py  bigbird.py  flashattention.py  hyena.py  linear_attention.py  longformer.py  memorizing_transformer.py  recurrent_mem.py  rotary.py  rwkv.py  transformer_xl.py
openlongcontext/theory/: bounds.py  capacity.py  generalization.py  information.py  scaling_analysis.py
openlongcontext/tracking/: logger.py  mlflow_integration.py  reproducibility.py  tensorboard_integration.py  wandb_integration.py
openlongcontext/utils/: config_utils.py  math_utils.py  profiler.py  seed.py  testing.py
scripts/: setup_dev_env.sh
scripts/deployment/: deploy_inference.py  export_model.py  monitor_long_context.py
scripts/evaluation/: ablation_report.py  eval_perplexity.py
scripts/experiments/: run_bayesian.py  run_experiment.py  run_grid_search.py  sweep_long_context.py
scripts/setup/: setup_cuda.sh
tests/integration/: test_ablation.py  test_api.py  test_experiment_repro.py  test_long_context_pipeline.py  test_scaling_laws.py  test_theory_empirical.py
tests/performance/: benchmark_long_context.py  latency_tests.py  memory_tests.py  scaling_benchmarks.py  test_agent_performance.py
tests/unit/: test_ablation.py  test_agents.py  test_algorithms.py  test_api_routes.py  test_auth.py  test_backend.py  test_bayesian_optimization.py  test_datasets.py  test_evaluation.py  test_models.py  test_theory.py  test_utils.py
