[metadata]
name = openlongcontext
version = 1.0.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.24.0
    scipy>=1.11.0
    scikit-learn>=1.3.0
    matplotlib>=3.8.0
    omegaconf>=2.3.0
    openai>=1.0.0
    fastapi>=0.100.0
    pydantic>=2.0.0
    torch>=2.1.0
    transformers>=4.35.0
    pytest>=7.4.0

[options.packages.find]
where = .
include = openlongcontext*

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
follow_imports = silent
no_implicit_reexport = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-omegaconf.*]
ignore_missing_imports = True

[mypy-openai.*]
ignore_missing_imports = True

[mypy-fastapi.*]
ignore_missing_imports = True

[mypy-pydantic.*]
ignore_missing_imports = True

[mypy-torch.*]
ignore_missing_imports = True

[mypy-transformers.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short --strict-markers
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

[coverage:run]
source = openlongcontext
omit = 
    */tests/*
    */venv/*
    */__pycache__/*
    */site-packages/*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False

[flake8]
max-line-length = 100
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,build,dist,venv
per-file-ignores = __init__.py:F401

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True

[pydocstyle]
convention = google
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107